--- a/backend/src/Apontamento.Api/appsettings.json
+++ b/backend/src/Apontamento.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "MongoDb": {
+    "ConnectionString": "mongodb://192.168.0.67:27017",
+    "DatabaseName": "apontamento_horas",
+    "ProjetosCollectionName": "projetos",
+    "ApontamentosCollectionName": "apontamentos"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
