--- a/backend/test/Apontamento.Test/Apontamento.Test.csproj
+++ b/backend/test/Apontamento.Test/Apontamento.Test.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0-preview.7.25380.108" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Apontamento.Api\Apontamento.Api.csproj" />
     <ProjectReference Include="..\..\src\Apontamento.Domain\Apontamento.Domain.csproj" />
   </ItemGroup>
 
