--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -6,15 +6,17 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "eslint ."
 	},
 	"dependencies": {
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.563.0",
 		"next": "^16.1.6",
 		"radix-ui": "^1.4.3",
 		"react": "19.0.0",
+		"react-datepicker": "^9.1.0",
 		"react-dom": "19.0.0",
 		"tailwind-merge": "^3.4.0"
 	},
@@ -23,6 +25,7 @@
 		"@types/node": "^20.14.12",
 		"@types/react": "^19.0.3",
 		"@types/react-dom": "^19.0.3",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.20.0",
 		"eslint-config-next": "^16.1.6",
 		"shadcn": "^3.8.4",
